--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rebeccapurple;
+    background-color: yellow;
     display:flex;
     align-items: center;
     justify-content: center;
